--- a/src/template.html
+++ b/src/template.html
@@ -1,14 +1,3 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
--->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
-    <!-- Put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <!-- site title -->
+    <title>Joseph Defendre | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="[username], [Joseph Defendre], css, sass, javascript " />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="Portfolio website for Joseph Defendre" content="[Joseph Defendre] | Developer" />
 
     <!-- Required librarys -->
     <link
@@ -34,11 +23,8 @@
       ScrollReveal({ reset: false });
     </script>
 
-    <!-- Remove this script once you setup your custom portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
-  <!-- Follow the HTML instructions to create your stunning portfolio website -->
   <body>
     <div id="top"></div>
 
@@ -46,12 +32,12 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hello, my name is <span class="text-color-main">Joseph Defendre</span>
           <br />
-          I'm the Unknown Developer.
+          Front End Web Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
+          <a class="cta-btn cta-btn--hero" href="#about">Learn More</a>
         </p>
       </div>
     </div>
@@ -68,7 +54,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.jpg"
+                src="./assets/profile.jpeg"
                 alt="Profile Image"
               />
             </div>
@@ -76,8 +62,8 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                Through out my career in the workforce and in the military I have been trained on and off the job to solve complex problems, while working both alone and in a team environment. I have learned to be creative and passionate in my approach to interacting with complex systems, software and teams. 
+                I aim to take that drive and passion for problem solving into the software development field.
               </p>
               <p class="about-wrapper__info-text">
                 Extra Information about you! like hobbies and your goals.
@@ -104,14 +90,16 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Portfolio</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    ⚡️ Modern UI Design + Reveal Animations
+                    ⚡️ One Page Layout
+                    ⚡️ Styled with Bootstrap v4.3 + Custom SCSS
+                    ⚡️ Fully Responsive
+                    ⚡️ Valid HTML5 & CSS3
+                    ⚡️ Optimized with Webpack
+                    ⚡️ Well organized documentation
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
@@ -211,12 +199,12 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text"> Send me an email! </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:jchacker5@gmail.com"
+            >Email Me</a
           >
         </div>
       </div>
@@ -253,28 +241,7 @@
             >Jacobo Martínez</a
           >
         </p>
-
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
+        
       </div>
     </footer>
     <!-- /END Footer Section -->
